Fix the wrong background showing for the numbering on the playlist in retro
What was happening was that the background was being applied twice, and
as they're transparent background, it meant that the ::before element
had a different background colour than the rest of the list item.

--- a/cmd/tchaik/ui/static/sass/components/retro.scss
+++ b/cmd/tchaik/ui/static/sass/components/retro.scss
@@ -56,24 +56,28 @@ div.retro {
             border: 0;
             font-size: 12px;
 
-            &:hover, &:hover::before {
+            &:hover {
               background-color: $transparent-bar-dark-background-highlight;
+            }
+
+            &:hover::before {
+              background-color: $transparent;
             }
 
             &.current {
               color: $light-blue;
-              background-color: inherit;
+              background-color: $transparent;
 
               &::before {
                 color: $light-blue;
-                background-color: inherit;
+                background-color: $transparent;
               }
 
               span.info span.duration, span.info span.glyphicon-remove {
                 color: $light-blue;
               }
 
-              &:hover, &:hover::before {
+              &:hover {
                 background-color: $transparent-bar-dark-background-highlight;
               }
             }
