--- a/cmd/tchaik/ui/static/sass/variables.scss
+++ b/cmd/tchaik/ui/static/sass/variables.scss
@@ -14,6 +14,7 @@ $darker-background: #1C1C1C;
 $search-box-background: rgba(#fff, 0.1);
 $search-box-background-focus: rgba(#fff, 0.2);
 
+$transparent: rgba(black, 0);
 $transparent-bar-background: rgba($light-background, 0.4);
 $transparent-bar-light-background: rgba($light-background, 0.3);
 $transparent-bar-dark-background: rgba($darker-background, 0.8);
